--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ button {
 </div>
 
 <div class="container hidden" id="valentinePage">
-    <h1>Will You Be My Valentine? ❤️</h1>
+    <h1>Will You Be My Valentine? 💐❤️</h1>
     <button class="yesBtn" onclick="sayYes()">Yes 💘</button>
     <button class="yesBtn" onclick="sayYes()">YESSS!!😘</button>
 </div>
@@ -136,3 +136,4 @@ setInterval(createHeart, 300);
 
 </body>
 </html>
+
